Fix : Change the `isDateValid` code, now use `LocalDate.parse()` instead of a custom parse. In `is18orMore()`, use `OffsetDateTime` instead of `LocalDate`. Refactor : the `isEmpty(string s)` function is change for just `str.isBlank()` instead.